# iot_screen

./: .gitignore  Cargo.toml
client/: Cargo.toml
client_no_std/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/protocol/: message_generated.rs  mod.rs
iot_screen/: platformio.ini
iot_screen/include/: message_generated.h
iot_screen/src/: main.cpp
protocol/: message.fbs
server/: .gitignore  Cargo.toml
server/frontend/: bun.lockb  index.html  package.json  tailwind.config.js
server/frontend/src/: App.tsx  index.css
server/frontend/src/components/: dashboard.tsx  navbar.tsx  oauth-client-config.tsx  oauth-configurations.tsx  oauth-token-exchanger.tsx  widget-button.tsx  widget-config-card.tsx  xtb-login-card.tsx
server/frontend/src/components/ui/: card.tsx  color-picker.tsx  enhanced-button.tsx
server/frontend/src/hooks/: use-query-params.tsx
server/frontend/src/lib/: types.ts
server/frontend/src/lib/api/: base.ts  send-dashboard-config.ts  send-oauth-code.ts  send-xtb-credentials.ts
server/frontend/src/lib/store/: store.ts
server/migrations/: 01_initialize_weather.sql  02_api_keys.sql  03_oauth2_tokens.sql  03_spotify_tokens.sql  04_xtb.sql
server/src/: main.rs
server/src/db/: mod.rs
server/src/tcp/: mod.rs
server/src/web/: mod.rs
server/src/web/oauth2/: mod.rs
server/src/web/spotify/: mod.rs
server/src/web/weather/: mod.rs
server/src/web/xtb/: mod.rs
