[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
core = { path = "../core" }
dotenv = "0.15.0"
reqwest = {version = "0.12.12", features = ["json"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = {version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite", "macros", "chrono"]}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
