[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1" }
chrono = "0.4.39"
core = { path = "../core" }
dotenv = "0.15.0"
reqwest = {version = "0.12.12", features = ["json"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = {version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite", "macros", "chrono"]}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
